# the_crucible

./: .env.example  .gitignore  README.md  example_bot.py  pyproject.toml  simulate.py  test_match.py
crucible/: __init__.py  arena.py  challenges.py  game_master.py  games.py  match.py  matchmaker.py  mini_game_sim.py  server.py  tribute.py
docs/: protocol.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: config.ts  main.ts  vite-env.d.ts
ui/src/components/: app.ts  arena.ts  docs.ts  leaderboard.ts  match-viewer.ts  mini-games.ts  spectator.ts
